# batch-data-extractor

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
