[package]
name = "batch-data-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdt = "0.17"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
clap = { version = "^4.4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
parquet-to-mysql = { git = "https://github.com/Scoopit/parquet-to-mysql.git", branch = "main" }
datafusion = "34"
futures = "0.3"
humantime = "2"
atty = "0.2"
